--- a/PROJETOS/POKEDEX/code/Tela_Home/style.css
+++ b/PROJETOS/POKEDEX/code/Tela_Home/style.css
@@ -73,8 +73,7 @@ nav {
 
 }
 
-
-.pesquisa{
+.pesquisa {
     margin-right: 45vw;
     margin-top: 8vh;
 }
@@ -98,7 +97,7 @@ nav {
 
 
 /* Definindo a posição da imagem do ash e do pikachu que repreetada a carta de informações */
-.carta{
+.carta {
     position: absolute;
     top: 9.5vh;
     left: 15vw;
@@ -128,7 +127,7 @@ nav {
 }
 
 /* Definindo posicção que vai ficar a imagem de joguinho que leva para o jogo de memoria */
-.gamezinho{
+.gamezinho {
     position: absolute;
     top: 10vh;
     left: 19vw;
@@ -209,9 +208,8 @@ nav p {
 
 }
 
-
 /* É necessario você definir a parte clicavel da div de seta de avanço em conjunto com a imgame de avanço */
-.setaAvanco {
+.setaRecuo {
     position: absolute;
     top: 72.6%;
     left: 40.2%;
@@ -230,7 +228,7 @@ nav p {
 }
 
 /* É necessario você definir a parte clicavel da div de seta de recuo em conjunto com a imgame de recuo*/
-.setaRecuo {
+.setaAvanco {
     position: absolute;
     top: 72.6%;
     left: 44.4%;
@@ -262,70 +260,85 @@ nav p {
     position: absolute;
     top: 76%;
     left: 56.8%;
-    color:#fff;
+    color: #fff;
 }
 
 
 /* Editando o modal de pesquisa */
 .telaPesquisa {
-    height: 30%;
-    width: 18%;
-    position: absolute;
-    top: 75%;
-    left: 674px;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.85);
-    padding: 2em;
-    border-radius: 15px;
-    display: none;
-    /* só aparece quando clicar no botão */
-    z-index: 100;
+    height: 100vh;
+    margin-top: -60vh;
+    width: 100vw;
+    margin-right: -41vw;
+    background-color: rgba(0, 0, 0, 0.548);
 }
 
 /* Centralizando */
 .divCentralPesquisa {
+    position: absolute;
+    background-color: #fff;
+    top: 20%;
+    height: 70vh;
+    width: 45vw;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1em;
 }
 
-.divCentralPesquisa nav {
-    margin-top: -16vh;
-}
+/* Editando a imagem eu vai aparecer sobre o modal de pesquisa */
+#imagemModalPesquisa{
+    height: 15vh;
+    margin-top: -35vh;
+    margin-bottom: -2vh;
+    margin-left: 12vw;
 
+}
 /* Mudando  o input de pesquisa */
 #inputPesquisaPokemon {
-    width: 200px;
+    width: 16vw;
     padding: 0.5em;
     border-radius: 8px;
     border: none;
-    margin-left: 15vw;
+    margin-left: 14vw;
     margin-top: 5vh;
+    background-color: #C1DBDC;
+    color: #000;
 }
 
 /* Editando o  btn de pesquisa */
 #buscarPokemon {
     padding: 0.5em 1em;
     border-radius: 8px;
-    background-color: #C24B06;
+    background-color: #8ed6d8;
     color: white;
     border: none;
     cursor: pointer;
-    margin-left: 16vw;
+    margin-left: 12vw;
     margin-top: 1vh;
-
 }
 
 .resultados {
     color: #fff;
-    background-color: #585555;
+    background-color: #C1DBDC;
     margin-left: 15vw;
-    width: 200px;
-    height: 16vh;
+    width: 20vw;
+    border-radius: 8px;
+    height: 20vh;
     overflow-y: scroll;
     padding-top: 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.linhaResultado{
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 12vw;
+    border-radius: 8px;
+    background-color:#000;
 }
 
 #fecharmodalPesquisa {
@@ -396,7 +409,7 @@ nav p {
     justify-content: space-between;
 }
 
-#vidaPokemon{
+#vidaPokemon {
     margin-top: 4.4vh;
     margin-left: 1vw;
 }
